Update test suite
Install libstdc++ 4.9 for clang-3.8 and clang-3.9 to avoid ::gets error.

--- a/.travis.yml
+++ b/.travis.yml
@@ -167,6 +167,7 @@ matrix:
         apt:
           packages:
             - clang-3.8
+            - libstdc++-4.9-dev
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.8
@@ -177,6 +178,7 @@ matrix:
         apt:
           packages:
             - clang-3.9
+            - libstdc++-4.9-dev
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.9
