--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-4.6"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++"
             sources: ""
             llvm_os: ""
@@ -46,7 +47,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-4.7"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-4.7"
             sources: ""
             llvm_os: ""
@@ -58,7 +60,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-4.8"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-4.8"
             sources: ""
             llvm_os: ""
@@ -70,7 +73,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-4.9"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-4.9"
             sources: ""
             llvm_os: ""
@@ -82,7 +86,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-5"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-5"
             sources: ""
             llvm_os: ""
@@ -94,7 +99,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-6"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-6"
             sources: ""
             llvm_os: ""
@@ -106,7 +112,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-6"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-6"
             sources: ""
             llvm_os: ""
@@ -119,7 +126,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-7"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-7"
             sources: ""
             llvm_os: ""
@@ -131,7 +139,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-7"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-7"
             sources: ""
             llvm_os: ""
@@ -144,7 +153,8 @@ jobs:
             buildtype: "boost"
             packages: "g++-8"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "g++-8"
             sources: ""
             llvm_os: ""
@@ -156,7 +166,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-3.5"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-3.5"
             sources: ""
             llvm_os: "precise"
@@ -168,7 +179,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-3.6"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-3.6"
             sources: ""
             llvm_os: "precise"
@@ -180,7 +192,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-3.7"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-3.7"
             sources: ""
             llvm_os: "precise"
@@ -192,7 +205,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-3.8 libstdc++-4.9-dev"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-3.8"
             sources: ""
             llvm_os: "precise"
@@ -204,7 +218,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-3.9 libstdc++-4.9-dev"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-3.9"
             sources: ""
             llvm_os: "precise"
@@ -216,7 +231,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-4.0"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-4.0"
             sources: ""
             llvm_os: "xenial"
@@ -228,7 +244,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-5.0"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-5.0"
             sources: ""
             llvm_os: "xenial"
@@ -240,7 +257,8 @@ jobs:
             buildtype: "boost"
             packages: "clang-6.0"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-20.04"
+            container: "ubuntu:16.04"
             cxx: "clang++-6.0"
             sources: ""
             llvm_os: "xenial"
@@ -252,7 +270,7 @@ jobs:
             buildtype: "boost"
             packages: "libstdc++-5-dev"
             packages_to_remove: ""
-            os: "ubuntu-16.04"
+            os: "ubuntu-18.04"
             cxx: "clang++"
             sources: ""
             llvm_os: ""
@@ -264,7 +282,7 @@ jobs:
             buildtype: "boost"
             packages: " libc++-9-dev libc++abi-9-dev"
             packages_to_remove: "libc++-dev libc++abi-dev"
-            os: "ubuntu-16.04"
+            os: "ubuntu-18.04"
             cxx: "clang++-libc++"
             sources: ""
             llvm_os: "xenial"
@@ -280,6 +298,16 @@ jobs:
       - name: Check if running in container
         if: matrix.container != ''
         run: echo "GHA_CONTAINER=${{ matrix.container }}" >> $GITHUB_ENV
+      - name: If running in container, upgrade packages
+        if: matrix.container != ''
+        run: |
+            apt-get -o Acquire::Retries=3 update && DEBIAN_FRONTEND=noninteractive apt-get -y install tzdata && apt-get -o Acquire::Retries=3 install -y sudo software-properties-common wget curl apt-transport-https make apt-file sudo unzip libssl-dev build-essential autotools-dev autoconf automake g++ libc++-helpers python ruby cpio gcc-multilib g++-multilib pkgconf python3 ccache libpython-dev
+            sudo apt-add-repository ppa:git-core/ppa
+            sudo apt-get -o Acquire::Retries=3 update && apt-get -o Acquire::Retries=3 -y install git
+            python_version=$(python3 -c 'import sys; print("{0.major}.{0.minor}".format(sys.version_info))')
+            sudo wget https://bootstrap.pypa.io/pip/$python_version/get-pip.py
+            sudo python3 get-pip.py
+            sudo /usr/local/bin/pip install cmake
 
       - uses: actions/checkout@v2
 
@@ -344,7 +372,7 @@ jobs:
 
           BOOST_BRANCH=develop && [ "$TRAVIS_BRANCH" == "master" ] && BOOST_BRANCH=master || true
           cd ..
-          git clone -b $TRAVIS_BRANCH --depth 1 https://github.com/boostorg/boost.git boost-root
+          git clone -b $BOOST_BRANCH --depth 1 https://github.com/boostorg/boost.git boost-root
           cd boost-root
           git submodule update --init tools/boost_install
           git submodule update --init libs/headers
@@ -469,7 +497,7 @@ jobs:
 # 
 #           BOOST_BRANCH=develop && [ "$TRAVIS_BRANCH" == "master" ] && BOOST_BRANCH=master || true
 #           cd ..
-#           git clone -b $TRAVIS_BRANCH --depth 1 https://github.com/boostorg/boost.git boost-root
+#           git clone -b $BOOST_BRANCH --depth 1 https://github.com/boostorg/boost.git boost-root
 #           cd boost-root
 #           git submodule update --init tools/boost_install
 #           git submodule update --init libs/headers
