--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,11 +150,19 @@ jobs:
             os: windows-2019
           - toolset: msvc-14.2
             cxxstd: "14,17,20,latest"
-            addrmd: 32,64
+            addrmd: 32
+            os: windows-2019
+          - toolset: msvc-14.2
+            cxxstd: "14,17,20,latest"
+            addrmd: 64
             os: windows-2019
           - toolset: msvc-14.3
             cxxstd: "14,17,20,latest"
-            addrmd: 32,64
+            addrmd: 32
+            os: windows-2022
+          - toolset: msvc-14.3
+            cxxstd: "14,17,20,latest"
+            addrmd: 64
             os: windows-2022
           - toolset: clang-win
             cxxstd: "14,17,latest"
